# Cardguess

./: Cardguess.cabal  Cardguess.tex  LICENSE  Makefile  cardguess.html  initial.c
initial/: Makefile  common.c  common.h  config.h  feedback.c  feedback.h  initial.c
src/: Card.hs  Cardguess.hs  Common.hs  Feedback.hs  Main.hs  Makefile  Optimal1.hs  Optimal2.hs  Optimal3.hs  Optimal4.hs  Optimalguess.hs  Test.hs
