name:           Cardguess
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Adam Juraszek
license:        MIT
license-file:   LICENSE
category:       Game

executable Cardguess
  hs-source-dirs:  src
  main-is:         Main.hs
  ghc-options:     -Wall -O2
  build-depends:   base,
                   random-fu,
                   random-extras,
                   random,
                   containers